--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.2.70'
+        kotlinVersion = '1.3.60'
         springBootVersion = '2.1.0.RELEASE'
     }
     repositories {
@@ -42,7 +42,9 @@ repositories {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter')
+    implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    implementation('org.apache.httpcomponents:httpclient:4.5.10')
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     compileOnly('org.projectlombok:lombok')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
