--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,12 @@ buildscript {
     }
 }
 
+
+plugins {
+    id "org.jetbrains.kotlin.plugin.noarg" version "1.3.61"
+    id "org.jetbrains.kotlin.plugin.jpa" version "1.3.61"
+}
+
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse'
@@ -43,9 +49,13 @@ repositories {
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter')
     implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation('org.apache.httpcomponents:httpclient:4.5.10')
     implementation("org.jetbrains.kotlin:kotlin-reflect")
+    implementation("com.h2database:h2")
     compileOnly('org.projectlombok:lombok')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation("io.kotlintest:kotlintest-runner-junit5:3.3.3")
+    testImplementation("io.kotlintest:kotlintest-extensions-spring:3.3.3")
 }
