--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 looker.number.of.sources.to.try=50
 looker.number.of.threads=10
 looker.active.flows=standard
+
+looker.updating.proxy.list.interval.minutes=10
+
+spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:h2:./testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
