adding sources class hierarchy alongside with proxies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ looker.number.of.threads=10
 looker.active.flows=standard
 
 looker.updating.proxy.list.interval.minutes=10
+looker.updating.sources.list.interval.minutes=10
 
 spring.h2.console.enabled=true
 
