--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter')
@@ -54,8 +57,14 @@ dependencies {
     implementation('org.apache.httpcomponents:httpclient:4.5.10')
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("com.h2database:h2")
+
     compileOnly('org.projectlombok:lombok')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-    testImplementation("io.kotlintest:kotlintest-runner-junit5:3.3.3")
-    testImplementation("io.kotlintest:kotlintest-extensions-spring:3.3.3")
+
+    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+    testImplementation "org.jetbrains.kotlin:kotlin-test"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit"
+    testImplementation "io.kotlintest:kotlintest-extensions-spring:3.1.10"
+    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.1.10'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.3.1"
 }
